--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InicioConteudo</title>
-  <base href="/">
+  <title>ngClass | [M1S10] Ex 1</title>
+  <base href="/ngClass">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
